# esg-portfolio-optimizer

./: .gitignore  GITHUB_SETUP.txt  Makefile  PUSH_COMMANDS.txt  QUICKSTART.md  README.md  RESUME_CONTENT.txt  START_HERE.md  check_portfolio.py  check_raw_data.py  push_to_github.bat  pyproject.toml  run_quick_test.py
.github/workflows/: ci.yml
configs/: data_sources.yaml  model_config.yaml  portfolio_config.yaml
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: methodology.md
src/esg_model/: __init__.py  pipeline.py
src/esg_model/api/: __init__.py  main.py
src/esg_model/dashboard/: __init__.py  app.py
src/esg_model/ingestion/: __init__.py  edgar.py  epa.py  gdelt.py  universe.py  yahoo.py
src/esg_model/portfolio/: __init__.py  backtester.py  constructor.py
src/esg_model/processing/: __init__.py  features.py  nlp_models.py  text.py
src/esg_model/utils/: __init__.py  config.py  io.py  logging.py
tests/: __init__.py  test_features.py  test_portfolio.py
