[project]
name = "esg-model"
version = "0.1.0"
description = "ESG scoring & portfolio integration model for US-listed equities"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "sec-edgar-downloader>=5.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "transformers>=4.40",
    "torch>=2.2",
    "spacy>=3.7",
    "nltk>=3.8",
    "quantstats>=0.0.62",
    "mlflow>=2.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "streamlit>=1.33",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "pyarrow>=15.0",
    "plotly>=5.20",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
